# jubilant-fortnight

./: .codacy.yml  .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODACY_LINT_REPORT.md  DEPLOYMENT.md  Dockerfile  Makefile  NARRATIVE_LICENSE.md  PRODUCTION_BUGS_FOUND.md  README.md  RELEASE_1.0_CHECKLIST.md  RELEASE_1_0_RC_CHECKLIST.md  ROADMAP.md  TEST_CLEANUP_SUMMARY.md  docker-compose.yml  pyproject.toml
.claude/: AGENTS.md
.claude/agents/: ai-systems-optimizer.md  algorithm-specialist.md  api-integration-architect.md  architecture-reviewer.md  async-systems-architect.md  compliance-standards-auditor.md  config-manager.md  data-architect.md  data-validator.md  database-architect.md  database-engineer.md  devops-engineer.md  documentation-specialist.md  domain-modeler.md  domain-modeller.md  error-resilience-engineer.md  frontend-ui-specialist.md  game-design-specialist.md  game-systems-designer.md  integration-specialist.md  narrative-writer.md  observability-engineer.md  observability-specialist.md  performance-engineer.md  performance-optimizer.md  platform-integration-specialist.md  product-strategy-advisor.md  project-manager.md  python-refactoring-expert.md  requirements-engineer.md  security-architect.md  system-architect.md  technical-writer.md  test-engineer.md  ux-specialist.md  validation-specialist.md
.codacy/: codacy.yaml
.github/workflows/: ci.yml  publish_pages.yml
docs/: ARCHIVE_LOG.md  DESIGN_COMMITMENT.md  DRAFT_PR.md  GAME_ENHANCEMENTS.md  HLD.md  NARRATIVE_LICENSE.md  QDRANT_SETUP.md  REFACTORING_PLAN.md  SAFETY_PLAN.md  SYSTEM_ARCHITECTURE.md  TELEMETRY_COHORT_COMPARISONS.md  TELEMETRY_RUNBOOK.md  USER_GUIDE.md  WRITING_GUIDE.md  deployment.md  gap_analysis.md  implementation_plan.md  qdrant_setup.md  requirements_decomposition.md  requirements_evaluation.md
docs/ai/: qdrant_schemas.md  qdrant_usage_guide.md
docs/archive/: ARCHIVE_LOG.md  ARCHIVE_OPERATIONS.md  CODACY_LINT_REPORT.md  TEST_CLEANUP_SUMMARY.md  gap_analysis.md  implementation_plan.md  requirements_decomposition.md  (+1 more)
great_work/: __init__.py  alerting.py  config.py  discord_bot.py  expeditions.py  llm_client.py  models.py  moderation.py  multi_press.py  press.py  press_tone.py  rng.py  scheduler.py  scholars.py  service.py  state.py  telemetry.py  telemetry_decorator.py  web_archive.py
scripts/: fix_markdown.py
tests/: conftest.py  test_additional_coverage.py  test_admin_tools.py  test_calibration_snapshot.py  test_commitments_projects.py  test_conferences.py  test_contracts.py  test_defection_probability.py  test_deployment_smoke.py  test_discord_bot_integrations.py  test_expedition_resolver.py  test_expeditions.py  test_game_service.py  test_influence_sinks.py  test_llm_client.py  test_mentorship.py  test_moderation.py  test_multi_press.py  test_orders_migration.py  test_press_templates.py  test_preview_narrative.py  test_recruitment.py  test_rng_determinism.py  test_scheduler.py  test_scheduler_health.py  test_scholar_generation.py  test_seasonal_simulation.py  test_service_edge_cases.py  test_service_highlights.py  test_service_table_talk.py  test_service_theories.py  test_sideways_effects.py  test_state_edge_cases.py  test_symposium.py  test_table_talk.py  test_telemetry.py  test_telemetry_dashboard.py  test_telemetry_kpis.py  test_tools_telemetry_workflows.py  test_validate_narrative.py  (+1 more)
(+83 files in other folders)
