[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-great-work"
version = "0.1.0"
description = "The Great Work: Collaborative Knowledge Game"
authors = [{name = "Great Work Dev Team"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "discord.py>=2.3",
    "APScheduler>=3.10",
    "pydantic>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["great_work*"]
